# zk_texas_holdem

./: .env  .gitignore  README.md  index.html  next.config.ts  package-lock.json  package.json  program.json  tsconfig.json  tsconfig.tsbuildinfo  typedoc.json  vite.config.ts
imports/: zk_dealer.leo  zk_deck_shuffle.leo
inputs/: zk_texas_holdem.in
src/: App.css  App.tsx  index.css  main.leo  main.tsx
src/PlayingCard/: GinRummy.js
src/components/: Player.tsx
src/containers/: GameTable.css  GameTable.tsx  SetupGame.tsx
src/workers/: AleoWorker.ts  worker.ts
src/workers/zkPokerWorker/: Cargo.toml  output.txt
src/workers/zkPokerWorker/src/: lib.rs
src/workers/zk_poker_worker/: Cargo.toml  output.txt
src/workers/zk_poker_worker/src/: lib.rs
zk_texas_holdem/: README.md  output.txt  program.json
zk_texas_holdem/imports/: sra_encryption.leo  sra_encryption_v0_0_1.leo  zk_bitwise_stack_seiries_updates_v0_0_1.leo  zk_bitwise_stack_series_updates_v0_0_1.leo  zk_bitwise_stack_v0_0_1.leo  zk_deck_shuffle.leo  zk_deck_shuffle_v0_0_1.leo  zk_game_logic.leo
zk_texas_holdem/inputs/: zk_texas_holdem.in
zk_texas_holdem/src/: main.leo
