[package]
name = "zk_poker_worker"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
num-integer = "0.1.44"
num-bigint =  "0.4.2"
num-traits = "0.2.14"
num-prime = "0.4.3"
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.4"



[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
